tests/try_build/issue_1.stderr
warning: unused import: `HConsed`
 --> $DIR/issue_1.rs:5:19
  |
5 | use hashconsing::{HConsed, HConsign, HashConsign};
  |                   ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: `Cell<RefOrInt<'_>>` cannot be shared between threads safely
  --> $DIR/issue_1.rs:37:11
   |
37 |         s.spawn(move |_| {
   |           ^^^^^ `Cell<RefOrInt<'_>>` cannot be shared between threads safely
   |
   = help: within `HashableCell<RefOrInt<'_>>`, the trait `Sync` is not implemented for `Cell<RefOrInt<'_>>`
   = note: required because it appears within the type `HashableCell<RefOrInt<'_>>`
   = note: required because of the requirements on the impl of `Send` for `&HashableCell<RefOrInt<'_>>`
   = note: 1 redundant requirements hidden
   = note: required because of the requirements on the impl of `Send` for `Arc<&HashableCell<RefOrInt<'_>>>`
   = note: required because it appears within the type `HConsed<&HashableCell<RefOrInt<'_>>>`
   = note: required because it appears within the type `[closure@$DIR/tests/try_build/issue_1.rs:37:17: 45:10]`
